SubBt/force-app/main/default/objects/GL_Account__c/GL_Account__c.object-meta.xml
<CustomObject>
    <label>G/L Code</label>
    <nameField>
        <label>GL Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G/L Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>