SubBt/force-app/main/default/objects/GL_Account__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Only Active GL Accounts can be selected.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>