SubBt/force-app/main/default/objects/GL_Account__c/fields/Bond_Class__c.field-meta.xml
<CustomField>
    <fullName>Bond_Class__c</fullName>
    <label>Bond Class</label>
    <length>25</length>
    <type>Text</type>
</CustomField>