SubBt/force-app/main/default/objects/GL_Account__c/fields/Currencty__c.field-meta.xml
<CustomField>
    <fullName>Currencty__c</fullName>
    <label>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>