SubBt/force-app/main/default/objects/GL_Account__c/fields/Income_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Expense_Type__c</fullName>
    <label>Income Expense Type</label>
    <type>TextArea</type>
</CustomField>