SubBt/force-app/main/default/objects/GL_Account__c/fields/Job_Costing_Values__c.field-meta.xml
<CustomField>
    <fullName>Job_Costing_Values__c</fullName>
    <label>Job Costing Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>