SubBt/force-app/main/default/objects/GL_Account__c/fields/of_Overhead_Allocation__c.field-meta.xml
<CustomField>
    <fullName>of_Overhead_Allocation__c</fullName>
    <label>% of Overhead Allocation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>