SubBt/force-app/main/default/objects/GL_Account__c/fields/Overhead_Allocation_Income_Expense__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Allocation_Income_Expense__c</fullName>
    <label>Overhead Allocation Income Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>