SubBt/force-app/main/default/objects/GL_Account__c/fields/PO_Variance__c.field-meta.xml
<CustomField>
    <fullName>PO_Variance__c</fullName>
    <label>PO Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>