SubBt/force-app/main/default/objects/GL_Account__c/fields/Subdivision_Journal__c.field-meta.xml
<CustomField>
    <fullName>Subdivision_Journal__c</fullName>
    <label>Subdivision Journal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>