SubBt/force-app/main/default/objects/GL_Account__c/fields/Transaction_Type_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Indicator__c</fullName>
    <label>Transaction Type Indicator</label>
    <length>25</length>
    <type>Text</type>
</CustomField>