SubBt/force-app/main/default/objects/GL_Account__c/fields/Weighted_Value_of_Overhead_Expense__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Value_of_Overhead_Expense__c</fullName>
    <label>Weighted Value of Overhead Expense</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>